--- a/Prueba_subida_info_1.Rmd
+++ b/Prueba_subida_info_1.Rmd
@@ -9,6 +9,9 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 
 ```{r}
 plot(cars)
+
+# Se ñadade eta nueva linea solo para hacer los pasos del video
+
 ```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
