--- a/Prueba_subida_info_1.Rmd
+++ b/Prueba_subida_info_1.Rmd
@@ -10,7 +10,7 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 ```{r}
 plot(cars)
 
-# Se ñadade eta nueva linea solo para hacer los pasos del video
+# Se modificara esta sección y se añadiran los campos
 
 ```
 
